style.css
/*
html5doctor.com Reset Stylesheet
v1.6.1
Last Updated: 2010-09-17
Author: Richard Clark - http://richclarkdesign.com
Twitter: @rich_clark
*/

html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin:0;
    padding:0;
    border:0;
    outline:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

body {
    line-height:1;
}

article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section {
    display:block;
}

nav ul {
    list-style:none;
}

blockquote, q {
    quotes:none;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content:'';
    content:none;
}

a {
    margin:0;
    padding:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

/* change colours to suit your needs */
ins {
    background-color:#ff9;
    color:#000;
    text-decoration:none;
}

/* change colours to suit your needs */
mark {
    background-color:#ff9;
    color:#000;
    font-style:italic;
    font-weight:bold;
}

del {
    text-decoration: line-through;
}

abbr[title], dfn[title] {
    border-bottom:1px dotted;
    cursor:help;
}

table {
    border-collapse:collapse;
    border-spacing:0;
}

/* change border colour to suit your needs */
hr {
    display:block;
    height:1px;
    border:0;
    border-top:1px solid #cccccc;
    margin:1em 0;
    padding:0;
}

input, select {
    vertical-align:middle;
}

/*
** project specific styles
*********************************/
h1, h2, h3, h4, h5, h6, ul, ol, dl, p, blockquote {
	padding: .75rem 0;	/* top and bottom, left and right */
}

body {
	font-size: 1.0em;
	margin: 0;
	padding: 0;
	padding-bottom: 3em;
	font-family: Georgia, serif;
	line-height: 1.75em;
}

footer {
	padding-top: 2.0rem;
}

/* class for formatting links */
.format-link a {
  color: inherit;
	text-decoration: none;
	border-bottom: 1px dotted;
	position: relative;
}

.format-link a:hover,
.format-link a:focus {
  color: #fff;
	border-bottom: none;
	background: rgb(100, 120, 100);
	border-radius: .1rem;
	box-shadow: 0 0 0 .2rem rgb(100, 120, 100);
}

.name {
	font-family: Georgia, serif;
	font-style: italic;
  font-weight: bold;
	font-size: 1.2rem;
	padding: 0.5rem 0;
	text-align: right;
  color: rgb(130, 130, 130);
}

.width-managed {
	margin: auto;
	max-width: 50em;
	padding-left: 1rem;
	padding-right: 1rem;
}

.highlight {
	background: rgb(245, 245, 245);
	border-top: 1px solid rgb(200, 220, 200);
	border-bottom: 1px solid rgb(200, 220, 200);
}

/* h2 */
h2 {
	clear: both;
	text-align: center;
	font-size: 2.5em;
	padding: 1em 0;
	line-height: 1em;
	position: relative;
}

/* section */
h2.section {
  overflow-x: hidden;
}

h2.section span {
	position: relative;
}

h2.section span:before,
h2.section span:after {
	content: "";
	position: absolute;
	height: 1px;
	background: rgb(140, 170, 140);  /* line color */
	top: 60%;    /* slightly below half-way from the top of the text */
	width: 50vw; /* span entire browser page width (when there's zero text) */
}

/* line to the left of section heading */
h2.section span:before {
	right: 100%;
	margin-right: .5rem;
}

/* line to the right of section heading */
h2.section span:after {
	left: 100%;
	margin-left: .5rem;
}

h2 a {
   color: inherit;
}

/* h3 */
h3 {
	clear: both;
	text-align: center;
	font-size: 2em;
	padding: 0.5em 0;
	line-height: 1em;
	position: relative;
}

blockquote {
	position: relative;
	padding-left: 3rem;
}

blockquote:before {
	content:"\201C";
	font-size: 12rem;
	color: rgb(230, 240, 230);
	position: absolute;
	top: 50%;
	left: 0;
	z-index: -1;
}

.top-skill {
  padding-left: 3rem; /* match blockquote padding */
}

/* circular portrait */
.circular-portrait img{
  width:10em;
  height:10em;
	overflow: hidden;
  border-radius: 50%;
	object-fit: cover;
	padding-left: 0em;
	padding-right: 0em;
	padding-top: 0em;
	padding-bottom: 0em;
  box-shadow: 0.25em 0.25em 1.25em rgba(0, 0, 0, 0.3);
}

.portrait-padding .circular-portrait {
  padding-left: 1em;
	padding-right: 1em;
	padding-top: 1em;
	padding-bottom: 1em;
}

/* container to enable placing text to the right of image */
.container {
    display: flex;
    align-items:center;
}

.container img {
	display: block;	/* remove image padding completely within container */
}

/* main banner */
.main-banner {
	font-family: Georgia, serif;
	font-size: 1.5em;
	line-height: 1em;
	padding-left: 1em;
	padding-right: 1em;
	position: relative;
}

/* social icons */
.social{
    text-align: center;
}

.social img {
  margin: 10px;
}

.copyright {
	font-size: .7em;
  line-height: .7em;
}

.marker {
	height: 1px;
	background: rgb(140, 170, 140);
	width: 4rem;
	margin-top: 0;
	margin-bottom: 2.5em;
	margin-left: auto;
	margin-right: auto;
	display: block;
}

/* buttons */
.btn {
  font-family: Georgia, serif;
  background-color: rgb(15, 128, 192);
  border: none;
  color: white;
  padding: 10px 20px;
  cursor: pointer;
  font-size: .8em;
  border-radius: .5em;
}

.btn:hover {
  background-color: rgb(100, 120, 100);
}

